# cross-terminal

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_ORGANIZATION_RULES.md  PROJECT_RULES.md  README.md  TESTING_RULES.md  build.sh  test.sh
.github/workflows/: android-deploy.yml  ci.yml
android/: build.gradle  build.gradle.kts  gradle.properties  gradlew  settings.gradle  test-android.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/crossplatform/terminal/: MainActivity.kt
android/app/src/main/java/com/crossplatform/terminal/hardware/: HardwareManager.kt
android/app/src/main/java/com/crossplatform/terminal/terminal/: TerminalController.kt  TerminalInputConnection.kt  TerminalView.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
macos/: test-macos.sh
research/features/: hardware_20250824.md
research/reports/: terminal_features_20250824.md
scripts/: background-research.sh  setup-dev.sh  sync-repo.sh
src/: main.cpp
src/core/: terminal.cpp  terminal.h
src/core/implementations/: shell_impl.cpp  shell_impl.h
src/core/interfaces/: i_hardware_controller.h  i_platform.h  i_shell.h
src/hardware/: hardware_controller.cpp  hardware_controller.h
src/hardware/android/: android_hardware.cpp  android_hardware.h
src/hardware/macos/: macos_hardware.h  macos_hardware.mm
src/memory/: memory_manager.cpp  memory_manager.h
src/platform/: platform.cpp  platform.h
src/platform/android/: android_platform.cpp  android_platform.h
src/platform/macos/: macos_platform.h  macos_platform.mm
tests/: CMakeLists.txt
tests/hardware/: android_hardware_test.cpp
tests/mocks/: mock_platform.cpp  mock_platform.h
tests/platform/: android_platform_test.cpp  macos_platform_test.cpp
tests/unit/: test_terminal.cpp
